--- a/languages/en.json
+++ b/languages/en.json
@@ -3,7 +3,7 @@
         "settings": {
             "enableForPlayers": {
                 "name": "Enable for players",
-                "hint": "Enable for players WTF for players. Requires players to refresh."
+                "hint": "Enable WTF for players. Requires players to refresh."
             },
             "showFlagPath": {
                 "name": "Show flag path",
